Fixes an issue when the media gallery is open when the user opens the global search, and parts of the media gallery are visible in the global search.

--- a/TokuCinema/src/styles/components/media-gallery/mobile.scss
+++ b/TokuCinema/src/styles/components/media-gallery/mobile.scss
@@ -53,7 +53,7 @@ $nav-button-transparent: rgba(29.8%, 33.7%, 36.9%, .8);
 
 %gallery-nav-button {
   position: absolute;
-  z-index: 5;
+  z-index: 3;
   cursor: pointer;
 
   div {
@@ -188,7 +188,7 @@ $nav-button-transparent: rgba(29.8%, 33.7%, 36.9%, .8);
   top: 0;
   left: 0;
   margin-top:80px;
-  z-index: 6;
+  z-index: 4;
   background-color: $modal-background;
   height: 100%;
   width: 100%;
@@ -205,7 +205,7 @@ $nav-button-transparent: rgba(29.8%, 33.7%, 36.9%, .8);
 
 .appear-in-modal {
   position: fixed;
-  z-index: 6;
+  z-index: 4;
   bottom: 5%;
   width: 80%;
   left: 10%;
