--- a/TokuCinema/src/styles/components/nav/mobile.scss
+++ b/TokuCinema/src/styles/components/nav/mobile.scss
@@ -47,7 +47,7 @@
   width: 100%;
   top: 80px;
   overflow: auto;
-  z-index: 1;
+  z-index: 5;
 }
 
 .nav-menu-modal {
@@ -66,7 +66,7 @@
   height: 100%;
   width: 80%;
   position: fixed;
-  z-index: 2;
+  z-index: 6;
   border-right: 1px solid $primary-background;
   right: 100%;
   transition: .6s;
@@ -113,7 +113,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 6;
   height: 40px;
   border: solid 1px black;
   width: calc(100% - 40px);
